Fix bg img not showing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url(/img/bg.jpg);
+    background: url(../img/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
